components/simple-nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-nginx
    app.kubernetes.io/part-of: simple-nginx
    app.kubernetes.io/component: simple-nginx
    app.kubernetes.io/instance: simple-nginx
    app.kubernetes.io/name: simple-nginx
  name: simple-nginx
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: simple-nginx
  sessionAffinity: None
  type: ClusterIP
