components/simple-nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-nginx
    app.kubernetes.io/part-of: simple-nginx
    app.kubernetes.io/component: simple-nginx
    app.kubernetes.io/instance: simple-nginx
    app.kubernetes.io/name: simple-nginx
  name: simple-nginx
spec:
  port:
    targetPort: http
  to:
    kind: "Service"
    name: simple-nginx
    weight: null
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
